# i-tried-learning-yew-rust-but-got-transported-to-another-world-and-reincarnated-as-a-shogi-board

./: Cargo.toml  README.markdown  index-279af9028938999e.js  index-279af9028938999e_bg.wasm  index-4dc3a9ca1ea0663b.js  index-4dc3a9ca1ea0663b_bg.wasm  index-63adc6c7cdf0487b.js  index-63adc6c7cdf0487b_bg.wasm  index-a4daaf821b2b7d38.js  index-a4daaf821b2b7d38_bg.wasm  index.html  style-4463660bed9886f7.css  style.css
.github/workflows/: build.yml
src/: board.rs  hand.rs  main.rs  piece.rs  shareable_link.rs
src/board/: square.rs
