[package]
name = "i-tried-learning-yew-rust-but-got-transported-to-another-world-and-reincarnated-as-a-shogi-board"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.18"
shogi = "0.10"
gloo = "0.3"
rand = "0.8"
wasm-bindgen = "0.2"
base64 = "0.13"

[dependencies.getrandom]
version = "0.2"
features = [
  "js",
]

[dependencies.web-sys]
version = "0.3"
features = [
  "HtmlAudioElement",
  "History",
  "Navigator",
  "Clipboard",
]
